# syntsch

./: .env.example  .gitignore  LICENSE  README.md  cli.py  config.py  models.py  pyproject.toml  storage.py  utils.py
.github/workflows/: author.yml  ci.yml  reflect.yml  scout.yml
.next/: trace  trace-build
agents/: author.py  curator.py  reflector.py  scout.py
data/articles/: 24-stunden-20-djs-kein-masterplan.json  24-stunden-20-djs-kein-masterplan.trace.json  andrei-plakhov-liest-die-berlinale.json  andrei-plakhov-liest-die-berlinale.trace.json  annika-kahrs-lasst-berlin-knirschen.json  annika-kahrs-lasst-berlin-knirschen.trace.json  annika-kahrs-pokidaet-belyy-kub.json  annika-kahrs-pokidaet-belyy-kub.trace.json  annika-kahrs-reroutes-the-score-across-berlin.json  annika-kahrs-reroutes-the-score-across-berlin.trace.json  article-015ccfae-98fd-46ad-bcc3-e32de1576bae.json  article-01e27044-07ce-49b2-9d48-83dfc951d920.json  article-324f45c2-add2-4223-96a9-b487fd031a06.json  article-42dcdafb-3719-4dc6-a1de-06a7a32100a2.json  article-6731dd0f-cf8a-427b-a0e4-3c5de4d72abe.json  article-6d8cbad4-927c-4019-af41-5d0984628576.json  article-6ea22460-7766-414f-80b8-448fc2a53105.json  berlin-faltet-japan.json  (+147 more)
examples/: sample_event.json
notifiers/: email.py  telegram.py
prompts/: author_system.md  critic_system.md  reflector_system.md
sources/: base.py  research.py  tavily_search.py
tests/: test_author.py  test_models.py  test_notify.py  test_storage.py  test_tavily_search.py  test_utils.py
web/: .env.sample  README.md  package-lock.json  package.json  vercel.json
(+178 files in other folders)
