[project]
name = "ptytsch"
version = "0.1.0"
description = "Autonomous cultural digest — finds events, writes articles, publishes daily"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0",
]

[tool.setuptools]
py-modules = ["cli", "config", "models", "storage"]
packages = ["agents", "sources", "notifiers"]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
]
